[tool.poetry]
name = "lightningrobot"
version = "1.0.2"
description = "轻快，好用，基于Python的多平台机器人框架。"
authors = ["Zhihan <zhihan2727@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymysql = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
